kubernetes manifests/tinyapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: tinyapp
  name: tinyapp
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    service: tinyapp
